--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -1,2 +1,97 @@
-<h1>Home works</h1>
+<div class="row">
+  <div class="col-md-8">
+    <p><a href="http://simplevote.com">SimpleVote</a> is an open-source, self-hostable, <strong>live-updating</strong> voting/polling platform, for both live meetings, or extended polls.</p>
+    <p>Polls can be dynamic, meaning users can(<em>if allowed</em>) contribute options and questions themselves.</p>
+    <p>It uses <a href="http://rangevoting.org/UniqBest.html">range voting</a>(also known as olympic score voting) for all your poll options. <a href="http://rangevoting.org/">Range voting</a> is <em>more expressive</em> than simple 👍 or 👎 votes (IE <a href="http://rangevoting.org/AppExec.html">approval</a>, its subset). It also beats out <a href="http://rangevoting.org/rangeVirv.html">IRV</a>, and <a href="http://rangevoting.org/Plurality.html">first past the post</a> for <a href="http://rangevoting.org/UniqBest.html">minimizing voter regret</a>.</p>
+    <p class="mb-1">Features:</p>
+    <ul>
+      <li><p class="mb-0">Polls can have multiple questions.</p></li>
+      <li><p class="mb-0">Anyone can edit, delete, or create additional questions, and options(if allowed by the creator), at anytime.</p></li>
+      <li><p class="mb-0">Live chat on the sidebar.</p></li>
+      <li><p class="mb-0">Questions can have expiration times, and thresholds (Making sure options with too few votes don’t win).</p></li>
+      <li><p class="mb-0">Easily shareable poll links.</p></li>
+    </ul>
+    <button role="button" class="btn btn-secondary btn-block" (click)="createPoll()"><i class="fa fa-fw fa-pencil-square-o"></i>Create a poll</button>
+  </div>
+  <!-- A mocked poll -->
+  <div class="col-md-4">
+    <div class="card-block">
+      <h4 class="card-title">
+        <span tooltip="Check out sample poll" role="button" [routerLink]="['/poll/1']">As a judge in the cuteness olympics, which gets 1st place ribbon?</span>
+     </h4>
+      <div>
+        <div>
+          <div class="mb-3">
+            <p class="mb-1">
+              <span>Flappy fish (mudskipper)</span>
+            </p>
+            <div class="progress" ng-reflect-tooltip="[object Object]">
+              <div class="progress-bar" role="progressbar" style="background-color: rgb(152, 121, 137); width: 70%;">
+                <span>
+          Score: 70
+        </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="mb-3">
+            <p class="mb-1">
+              <span>Lil Yapper</span>
+            </p>
+            <div class="progress" ng-reflect-tooltip="[object Object]">
+              <div class="progress-bar" role="progressbar" style="background-color: rgb(132, 108, 153); width: 53%;">
+                <span>
+          Score: 53
+        </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="mb-3">
+            <p class="mb-1">
+              <span>A meower</span>
+            </p>
+            <div class="progress" ng-reflect-tooltip="[object Object]">
+              <div class="progress-bar" role="progressbar" style="width: 47%;">
+                <span>
+          Score: 47
+        </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="mb-3">
+            <p class="mb-1">
+              <span>A big ole toader</span>
+            </p>
+            <div class="progress" ng-reflect-tooltip="[object Object]">
+              <div class="progress-bar" role="progressbar" style="background-color: rgb(51, 24, 89); width: 42%;">
+                <span>
+          Score: 42
+        </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="mb-3">
+            <p class="mb-1">
+              <span>Spiny boi (porcupine)</span>
+            </p>
+            <div class="progress" ng-reflect-tooltip="[object Object]">
+              <div class="progress-bar" role="progressbar" style="background-color: rgb(144, 109, 202); width: 27%;">
+                <span>
+          Score: 27
+        </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <app-new-user-modal></app-new-user-modal>
