--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-7 vertical-line-right">
     <p><a href="http://simplevote.com">SimpleVote</a> is an open-source, self-hostable, <strong>live-updating</strong> voting/polling platform, for both live meetings, or extended polls.</p>
     <p>Polls can be dynamic, meaning users can(<em>if allowed</em>) contribute options and questions themselves.</p>
     <p>It uses <a href="http://rangevoting.org/UniqBest.html">range voting</a>(also known as olympic score voting) for all your poll options. <a href="http://rangevoting.org/">Range voting</a> is <em>more expressive</em> than simple 👍 or 👎 votes (IE <a href="http://rangevoting.org/AppExec.html">approval</a>, its subset). It also beats out <a href="http://rangevoting.org/rangeVirv.html">IRV</a>, and <a href="http://rangevoting.org/Plurality.html">first past the post</a> for <a href="http://rangevoting.org/UniqBest.html">minimizing voter regret</a>.</p>
@@ -14,7 +14,7 @@
     <button role="button" class="btn btn-secondary btn-block" (click)="createPoll()"><i class="fa fa-fw fa-pencil-square-o"></i>Create a poll</button>
   </div>
   <!-- A mocked poll -->
-  <div class="col-md-4">
+  <div class="col-md-5">
     <div class="card-block">
       <h4 class="card-title">
         <span tooltip="Check out sample poll" role="button" [routerLink]="['/poll/1']">As a judge in the cuteness olympics, which gets 1st place ribbon?</span>
