Changing some fields to public, fixing install_dev job.

--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -26,7 +26,7 @@
               <span>Flappy fish (mudskipper)</span>
             </p>
             <div class="progress" ng-reflect-tooltip="[object Object]">
-              <div class="progress-bar" role="progressbar" style="background-color: rgb(152, 121, 137); width: 70%;">
+              <div class="progress-bar" role="progressbar" style="width: 70%;">
                 <span>
           Score: 70
         </span>
@@ -40,7 +40,7 @@
               <span>Lil Yapper</span>
             </p>
             <div class="progress" ng-reflect-tooltip="[object Object]">
-              <div class="progress-bar" role="progressbar" style="background-color: rgb(132, 108, 153); width: 53%;">
+              <div class="progress-bar bg-success" role="progressbar" style="width: 53%;">
                 <span>
           Score: 53
         </span>
@@ -54,7 +54,7 @@
               <span>A meower</span>
             </p>
             <div class="progress" ng-reflect-tooltip="[object Object]">
-              <div class="progress-bar" role="progressbar" style="width: 47%;">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 47%;">
                 <span>
           Score: 47
         </span>
@@ -68,7 +68,7 @@
               <span>A big ole toader</span>
             </p>
             <div class="progress" ng-reflect-tooltip="[object Object]">
-              <div class="progress-bar" role="progressbar" style="background-color: rgb(51, 24, 89); width: 42%;">
+              <div class="progress-bar bg-danger" role="progressbar" style="width: 42%;">
                 <span>
           Score: 42
         </span>
