--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         <a role="button" class="nav-link" (click)="createPoll()">Create a poll</a>
       </li>
       <li class="nav-item">
-        <a role="button" class="nav-link link-unstyled" placement="bottom" tooltip="Donate to the developer" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=2XTHDEBUNQ47U&lc=US&item_name=FlowChat&item_number=flowchat_02&amount=5%2e00&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted" target="_blank"><small><i class="fa fa-fw fa-beer"></i></small></a>
+        <a role="button" class="nav-link link-unstyled" placement="bottom" tooltip="Donate to the developer" href="https://paypal.me/THoulihan" target="_blank"><small><i class="fa fa-fw fa-beer"></i></small></a>
       </li>
     </ul>
     <ul class="navbar-nav my-lg-0">
