--- a/ui/src/app/components/question/question.component.html
+++ b/ui/src/app/components/question/question.component.html
@@ -69,7 +69,7 @@
       </div>
       <div class="form-group row">
         <label class="col-md-4 col-form-label">
-          <span tooltip="A percentage cutoff that removes candidates with too few votes">Threshold: {{question.threshold}}</span>
+          <span tooltip="A percentage cutoff that removes candidates with too few votes">Threshold: {{question.threshold}}%</span>
         </label>
         <div class="col-md-8">
           <input type="range" name="question_threshold" [value]="question.threshold"
