--- a/ui/src/app/components/candidate/candidate.component.html
+++ b/ui/src/app/components/candidate/candidate.component.html
@@ -4,7 +4,8 @@
     <span *ngIf="!candidate.title">Untitled candidate</span>
     <span *ngIf="candidate.avg_score" class="text-muted">
       <span *ngIf="foundVote()">Your Vote: {{myVote()}} | </span>
-      <span>Score: {{voteAvg(1)}} | </span>
+      <span *ngIf="candidate.meetsThreshold">Score: {{voteAvg(1)}} | </span>
+      <span *ngIf="!candidate.meetsThreshold">Score: Too Few Votes | </span>
       <span>{{voteCount()}} Votes</span>
     </span>
     <small role="button" (click)="toggleEditing()" *ngIf="candidate.editable && !expired"><i class="fa fa-fw fa-pencil-square-o" tooltip="Edit option"></i></small>
@@ -14,9 +15,9 @@
   </p>
   <div *ngIf="!this.candidate.editing">
     <div *ngIf="questionType == 1" class="progress">
-      <div class="progress-bar" role="progressbar" [style.background-color]="backgroundColor" [style.width.%]="candidate.avg_score">
-
+      <div *ngIf="candidate.meetsThreshold" class="progress-bar" role="progressbar" [style.background-color]="backgroundColor" [style.width.%]="candidate.avg_score">
       </div>
+      <div *ngIf="!candidate.meetsThreshold" class="progress-bar" role="progressbar"></div>
       <input class="vote_input" [value]="findMyVote()" (value)="createOrUpdateVote($event.target.value)" (mouseup)="createOrUpdateVote($event.target.value)" (touchend)="createOrUpdateVote($event.target.value)" type="range" min="0" max="100" step="5" value="100" [disabled]="expired" />
     </div>
     <div *ngIf="questionType == 2">
