--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
           <i class="fa fa-fw fa-user"></i>
         </span>
       </li>
-      <li class="nav-item">
+      <li [hidden]="true" class="nav-item">
         <a class="nav-link" role="button" (click)="logout()" placement="left" tooltip="Logout">
           <i class="fa fa-fw fa-sign-out"></i>
         </a>
