--- a/ui/src/app/components/poll/poll.component.html
+++ b/ui/src/app/components/poll/poll.component.html
@@ -9,6 +9,18 @@
           <small role="button" (click)="deletePoll()" *ngIf="poll.editable" tooltip="Delete poll"><i class="fa fa-fw fa-trash"></i></small>
           <small role="button" (click)="toggleDetails()" tooltip="Show details">{{detailsExpander()}}</small>
         </h2>
+        <button class="btn btn-secondary" role="button" (click)="toggleHelp()">
+          <span *ngIf="!showHelp"><i class="fa fa-fw fa-question-circle"></i>How does this work?</span>
+          <span *ngIf="showHelp">Hide</span>
+        </button>
+        <div *ngIf="showHelp">
+          <h4>Think of this like olympic score voting</h4>
+          <img class="img-fluid" src="https://miracleon32ndstreet.files.wordpress.com/2010/12/image12.png"/>
+          <ul>
+            <li>Move the slider right (higher) if you like the option, left if you don't.</li>
+            <li><b>You don't have to vote for every option</b>, not voting won't hurt your choices.</li>
+          </ul>
+        </div>
         <div *ngIf="showDetails">
           <h4>Details</h4>
           <div>Creator: {{poll.user.name}}</div>
