--- a/ui/src/app/components/poll/poll.component.html
+++ b/ui/src/app/components/poll/poll.component.html
@@ -18,7 +18,7 @@
           <img class="img-fluid" src="https://miracleon32ndstreet.files.wordpress.com/2010/12/image12.png"/>
           <ul>
             <li>Move the slider right (higher) if you like the option, left if you don't.</li>
-            <li><b>You don't have to vote for every option</b>, not voting won't hurt your choices.</li>
+            <li><b>You don't have to vote for every option</b>, not voting won't hurt your current votes.</li>
           </ul>
         </div>
         <div *ngIf="showDetails">
