--- a/ui/src/app/components/candidate/candidate.component.html
+++ b/ui/src/app/components/candidate/candidate.component.html
@@ -2,12 +2,12 @@
   <p class="mb-1" *ngIf="!this.candidate.editing">
     <span *ngIf="candidate.title" [innerHtml]="candidate.title | markdown"></span>
     <span *ngIf="!candidate.title">Untitled candidate</span>
-    <span *ngIf="candidate.avg_score" class="text-muted">
+    <small *ngIf="candidate.avg_score" class="text-muted">
       <span *ngIf="foundVote()">Your Vote: {{myVote()}} | </span>
       <span *ngIf="candidate.meetsThreshold">Score: {{voteAvg(1)}} | </span>
       <span *ngIf="!candidate.meetsThreshold">Score: Too Few Votes | </span>
       <span>{{voteCount()}} Votes</span>
-    </span>
+    </small>
     <small role="button" (click)="toggleEditing()" *ngIf="candidate.editable && !expired"><i class="fa fa-fw fa-pencil-square-o" tooltip="Edit option"></i></small>
     <small role="button" (click)="deleteCandidate()" *ngIf="candidate.editable && !expired" tooltip="Delete option"><i class="fa fa-fw fa-trash"></i></small>
     <small role="button" (click)="toggleDetails()" tooltip="Show details">{{detailsExpander()}}</small>
