Word break, fixes #20.

--- a/ui/src/app/components/chat/chat.component.html
+++ b/ui/src/app/components/chat/chat.component.html
@@ -6,7 +6,7 @@
       <table class="table-hover table-responsive" id="table">
         <tr *ngFor="let comment of poll.comments">
           <td class="nowrap text-muted"><small>{{comment.created | moment}}</small></td>
-          <td><b class="mr-1">{{comment.user.name}}</b>
+          <td class="break"><b class="mr-1">{{comment.user.name}}</b>
             <span [innerHtml]="comment.comment | markdown"></span>
             <span role="button" (click)="deleteComment(comment)" *ngIf="comment.editable" tooltip="Delete comment"><i class="fa fa-fw fa-trash"></i></span>
           </td>
