--- a/ui/src/app/components/poll/poll.component.html
+++ b/ui/src/app/components/poll/poll.component.html
@@ -8,12 +8,13 @@
           <small role="button" (click)="toggleEditing()" *ngIf="poll.editable"><i class="fa fa-fw fa-pencil-square-o" tooltip="Edit poll"></i></small>
           <small role="button" (click)="deletePoll()" *ngIf="poll.editable" tooltip="Delete poll"><i class="fa fa-fw fa-trash"></i></small>
           <small role="button" (click)="toggleDetails()" tooltip="Show details">{{detailsExpander()}}</small>
-          <small role="button" (click)="exportPoll()" tooltip="Export poll (.json)"><i class="fa fa-fw fa-floppy-o"></i></small>
+          <small role="button" (click)="exportPoll()" tooltip="Export poll (.json)"><i class="fa fa-fw fa-floppy-o mb-2"></i></small>
+          <br>
+          <button class="btn btn-secondary" role="button" (click)="toggleHelp()">
+            <span *ngIf="!showHelp"><i class="fa fa-fw fa-question-circle"></i>How does this work?</span>
+            <span *ngIf="showHelp">Hide</span>
+          </button>
         </h2>
-        <button class="btn btn-secondary" role="button" (click)="toggleHelp()">
-          <span *ngIf="!showHelp"><i class="fa fa-fw fa-question-circle"></i>How does this work?</span>
-          <span *ngIf="showHelp">Hide</span>
-        </button>
         <div *ngIf="showHelp">
           <h4>Think of this like olympic score voting</h4>
           <img class="img-fluid" src="https://miracleon32ndstreet.files.wordpress.com/2010/12/image12.png"/>
