--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,8 @@
         <a class="nav-link" href="https://github.com/dessalines/simple-vote" target="_blank">About</a>
       </li>
       <li class="nav-item">
-        <a role="button" class="nav-link" (click)="createPoll()">Create a poll</a>
+        <button role="button" class="btn btn-outline-primary mx-2"
+           (click)="createPoll()">Create a poll</button>
       </li>
       <li class="nav-item">
         <a role="button" class="nav-link link-unstyled" placement="bottom" tooltip="Donate to the developer" href="https://paypal.me/THoulihan" target="_blank"><small><i class="fa fa-fw fa-beer"></i></small></a>
