--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -5,3 +5,4 @@
 @import './app/styles/_bootswatch';
 @import './app/styles/extras.scss';
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
+@import '../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
